矿透望远镜幽灵槽位,jei拖入兼容